# fastregex-mcp

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
benchmarks/: latest-results.md  results_24000.md  results_3000.md  results_6000.md  results_96000.md  results_real_openclaw.md  results_real_openclaw_hash_todo.md  results_real_video_generate.md
crates/fastregex-bench/: Cargo.toml
crates/fastregex-bench/src/: main.rs
crates/fastregex-core/: Cargo.toml
crates/fastregex-core/src/: engine.rs  error.rs  filters.rs  hashing.rs  index.rs  lib.rs  overlay.rs  planner.rs  sparse.rs  tests.rs
crates/fastregex-mcp/: Cargo.toml
crates/fastregex-mcp/src/: main.rs
wrappers/: AGENT_POLICY.md
wrappers/claude/: README.md
wrappers/skills/fastregex-install/: SKILL.md
wrappers/skills/fastregex-policy/: SKILL.md
