[workspace]
members = ["crates/fastregex-bench",
  "crates/fastregex-core",
  "crates/fastregex-mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.8"
dashmap = "6.1"
globset = "0.4"
memmap2 = "0.9"
parking_lot = "0.12"
pcre2 = "0.2"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
walkdir = "2.5"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
