[package]
name = "fastregex-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
dashmap.workspace = true
globset.workspace = true
memmap2.workspace = true
memchr.workspace = true
parking_lot.workspace = true
pcre2.workspace = true
rayon.workspace = true
serde.workspace = true
thiserror.workspace = true
walkdir.workspace = true
xxhash-rust.workspace = true

[dev-dependencies]
proptest = "1.9"
tempfile = "3.23"
